--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-expense-tracker",
   "private": true,
   "version": "0.1.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -23,4 +24,3 @@
     "vite": "^4.4.9"
   }
 }
-
